--- a/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
@@ -1,27 +1,28 @@
-﻿
+﻿@model IEnumerable<ReviewSiteLogic.Render.RestaurantDisplay>
 @{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div>
+        <span class="h1">GudYelp</span><br/>
+        <span class="lead">Your source for discovering great Restaurants.</span>
+        <br/>
+        <span><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></span>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<h2>Top 3 Restaurants</h2>
+<div class="row container">
+    @foreach (var restaurant in Model)
+    {
+        <div class="col-md-3 well well-sm">
+            @Html.DisplayFor(modelItem => restaurant.Name)<br />
+            @Html.DisplayFor(modelItem => restaurant.Rating)<br />
+            @Html.DisplayFor(modelItem => restaurant.Address)<br />
+            @Html.DisplayFor(modelItem => restaurant.Phone)<br />
+            @Html.ActionLink("Details", "ViewRestaurant", new { id = restaurant.Id })
+        </div>
+        <div class="col-md-1"></div>
+    }
 </div>
