--- a/WebReviewSite/WebReviewSite/Views/Home/CreateRestaurant.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/CreateRestaurant.cshtml
@@ -8,7 +8,7 @@
 <h2>Add New Restaurant</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("CreateRestaurant", "Home", "FormMethod.Post"))
 {
     @Html.AntiForgeryToken()
     
