--- a/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
@@ -16,9 +16,9 @@
 </div>
 
 <h2>Top 3 Restaurants</h2>
-<div class="row container">
+<div class="card-columns">
     @foreach (var restaurant in Model) {
-        <div class="col-md-3 card">
+        <div class="card mx-2 my-2">
             <div class="card-body">
 
                 <h3 class="card-title">@Html.DisplayFor(modelItem => restaurant.Name)</h3>
@@ -26,9 +26,10 @@
                 <!--
                 @Html.DisplayFor(modelItem => restaurant.Address)<br/>
                 @Html.DisplayFor(modelItem => restaurant.Phone)<br/> -->
-                <a href="/Home/ViewRestaurant/@restaurant.Id" class="btn btn-outline-primary">Details & Reviews</a>
+                <div class="card-footer">
+                    @Html.ActionLink("Details", "ViewRestaurant", new { id = restaurant.Id }, new { @class = "btn btn-outline-primary" })
+                </div>
             </div>
         </div>
-        <div class="col-md-1"></div>
     }
 </div>
