--- a/WebReviewSite/WebReviewSite/Views/Shared/_Layout.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - GudYelp</title>
     @Styles.Render("~/Content/css")
@@ -9,34 +9,46 @@
 </head>
 
 <body>
-    <div class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand " href="/">
-                GudYelp
-            </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null ,new {@class = "nav-link"})</li>
-                    <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("View All", "ListRestaurants", "Home", null, new { @class = "nav-link" })</li>
-                </ul>
-            </div>
+<div class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand " href="/">
+            GudYelp
+        </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new {@class = "nav-link"})</li>
+                <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new {@class = "nav-link"})</li>
+                <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new {@class = "nav-link"})</li>
+                <li class="nav-item">@Html.ActionLink("View All", "ListRestaurants", "Home", null, new {@class = "nav-link"})</li>
+            </ul>
+
+            @using (Html.BeginForm("ListRestaurants", "Home", FormMethod.Get, new {@class = "form-inline"})) {
+                @Html.TextBox("q", null, new {@class = "form-control mr-sm-2"})
+            }
+
+            <!--
+            <form class="form-inline" action="/Home/ListRestaurants" method="get">
+                
+                <input class="form-control mr-sm-2" placeholder="Search Restaurants" name="q" type="search"/>
+            </form>
+            -->
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>GudYelp &copy; @DateTime.Now.Year - Cameron Wagstaff</p>
-        </footer>
-    </div>
+</div>
+<div class="container body-content">
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>GudYelp &copy; @DateTime.Now.Year - Cameron Wagstaff</p>
+    </footer>
+</div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+
+@RenderSection("scripts", required: false)
 </body>
 </html>
