Adding restaurant management page with deadend actions

--- a/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="col-sm-4 card">
             <div class="card-body">
                 <h2 class="card-title">Your source for discovering great Restaurants.</h2>
-                <a href="/Home/ListRestaurants" class="btn btn-outline-primary btn-lg">Dive in &raquo;</a>
+                @Html.ActionLink("Dive in »", "ListRestaurants", null, new {@class = "btn btn-outline-primary btn-lg"})
             </div>
         </div>
     </div>
