--- a/WebReviewSite/WebReviewSite/Views/Home/CreateReview.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/CreateReview.cshtml
@@ -5,24 +5,20 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CreateReview</h2>
+<h2>Add New Review</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("CreateReview", "Home", FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
     <div>
-        <h4>ReviewDisplay</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.RestaurantId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RestaurantId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RestaurantId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+
+        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.RestaurantId)
+        @Html.HiddenFor(model => model.DatePublished)
 
         <div class="form-group">
             @Html.LabelFor(model => model.ReviewerName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -57,14 +53,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DatePublished, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DatePublished, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DatePublished, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-10">
                 <input type="submit" value="Create" class="btn btn-secondary" />
             </div>
@@ -73,7 +61,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Restaurant", "ViewRestaurant", new { id = Model.RestaurantId})
 </div>
 
 @section Scripts {
