--- a/WebReviewSite/WebReviewSite/Views/Home/ViewRestaurant.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/ViewRestaurant.cshtml
@@ -5,66 +5,82 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-    <h2>@Html.DisplayFor(model => model.Name)</h2>
+<div class="container">
+    <div class="d-flex justify-content-between">
+        <div class="p-2 h2">
+            @Html.DisplayFor(model => model.Name)
+        </div>
+        <div class="p-2">
+            @Html.ActionLink("Edit", "ManageRestaurant", new { id = Model.Id }, new { @class = "btn btn-outline-danger" })
+        </div>
+    </div>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Address)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Address)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Phone)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Phone)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Rating)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Rating)
+            </dd>
+
+        </dl>
+    </div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
+    <div class="d-flex flex-row">
+        <div class="h3 p-2">
+            Reviews
+        </div>
+        <div class="p-2">
+            @Html.ActionLink("Add Your Review", "CreateReview", new { id = Model.Id }, new { @class = "btn btn-outline-primary" })
+        </div>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Phone)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
+    <div class="card-columns">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Rating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Rating)
-        </dd>
-
-    </dl>
-</div>
-<hr />
-<div>
-    <h3>Reviews</h3>
-    @Html.ActionLink("Add Your Review", "CreateReview", new { id = Model.Id }, new { @class = "btn btn-outline-primary" })
-</div>
-<div class="card-columns">
-
-    @foreach (var review in Model.Reviews)
-    {
-        <div class="card mx-2 my-2">
-            <div class="card-body">
-                <h4 class="card-title">
-                    @Html.DisplayFor(modelItem => review.Title)
-                </h4>
-                <h5 class="card-subtitle">
-                    @Html.DisplayFor(modelItem => review.Rating) / 10
-                </h5>
-                <div class="card-text">
-                    @Html.DisplayFor(modelItem => review.Body)
-                </div>
-                <div class="card-footer text-muted">
-                    @Html.DisplayFor(modelItem => review.ReviewerName)
-                    on
-                    @review.DatePublished.ToShortDateString()
+        @foreach (var review in Model.Reviews)
+        {
+            <div class="card mx-2 my-2">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        @Html.DisplayFor(modelItem => review.Title)
+                    </h4>
+                    <h5 class="card-subtitle">
+                        @Html.DisplayFor(modelItem => review.Rating) / 10
+                    </h5>
+                    <div class="card-text">
+                        @Html.DisplayFor(modelItem => review.Body)
+                    </div>
+                    <div class="card-footer text-muted">
+                        @Html.DisplayFor(modelItem => review.ReviewerName)
+                        on
+                        @review.DatePublished.ToShortDateString()
+                    </div>
                 </div>
             </div>
-        </div>
-    }
+        }
+    </div>
+    <hr />
+    <p>
+        @Html.ActionLink("Back to List", "ListRestaurants")
+    </p>
 </div>
-<hr />
-<p>
-    @Html.ActionLink("Back to List", "ListRestaurants")
-</p>
