--- a/WebReviewSite/WebReviewSite/Views/Shared/_Layout.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse">
+        <div class="navbar-collapse collapse justify-content-between">
             <ul class="navbar-nav">
                 <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new {@class = "nav-link"})</li>
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new {@class = "nav-link"})</li>
@@ -26,7 +26,7 @@
             </ul>
 
             @using (Html.BeginForm("ListRestaurants", "Home", FormMethod.Get, new {@class = "form-inline"})) {
-                @Html.TextBox("q", null, new {@class = "form-control mr-sm-2"})
+                @Html.TextBox("q", null, new {@class = "form-control mr-sm-2", @placeholder = "Search Restaurants"})
             }
 
             <!--
