Added editing functionality to Restaurants and Reviews.

--- a/WebReviewSite/WebReviewSite/Views/Home/ViewRestaurant.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/ViewRestaurant.cshtml
@@ -38,7 +38,7 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.Rating)
+                @Model.Rating.ToString("N1") / 10
             </dd>
 
         </dl>
