--- a/WebReviewSite/WebReviewSite/Views/Home/CreateRestaurant.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/CreateRestaurant.cshtml
@@ -41,14 +41,14 @@
 
         <div class="form-group">
             <div class="col-md-10">
-                <input type="submit" value="Create" class="btn btn-secondary"/>
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "ListRestaurants")
+    @Html.ActionLink("Back to List", "ListRestaurants", null, new {@class = "btn btn-secondary"})
 </div>
 
 @section Scripts {
