--- a/WebReviewSite/WebReviewSite/Views/Home/CreateReview.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/CreateReview.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "CreateReview";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    
 }
 
 <h2>Add New Review</h2>
@@ -51,17 +53,19 @@
                 @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
             </div>
         </div>
+        
+        
 
         <div class="form-group">
             <div class="col-md-10">
-                <input type="submit" value="Create" class="btn btn-secondary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to Restaurant", "ViewRestaurant", new { id = Model.RestaurantId})
+    @Html.ActionLink("Back to Restaurant", "ViewRestaurant", new { id = Model.RestaurantId}, new {@class = "btn btn-secondary"})
 </div>
 
 @section Scripts {
