--- a/WebReviewSite/WebReviewSite/Views/Home/EditRestaurant.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/EditRestaurant.cshtml
@@ -12,7 +12,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
