--- a/WebReviewSite/WebReviewSite/Views/Home/EditReview.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/EditReview.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="form-horizontal">
+<div>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -53,14 +53,14 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-secondary" />
+            <input type="submit" value="Save" class="btn btn-primary" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "ViewRestaurant", Model.RestaurantId)
+    @Html.ActionLink("Back", "ManageRestaurant", new{id = Model.RestaurantId}, new{@class = "btn btn-secondary"})
 </div>
 
 @section Scripts {
