Added content to about and contact pages.

--- a/WebReviewSite/WebReviewSite/Views/Home/Contact.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/Contact.cshtml
@@ -1,17 +1,15 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="text-center">
+    <h1>
+        Contact us
+    </h1>
+    
+    <hr/>
+    
+    <strong>Business Inquiries:</strong> <a href="mailto:business@example.com">Business@example.com</a>
+    <br/>
+    <a href="/" class="btn btn-outline-secondary my-3">We're Hiring!</a>
+</div>
