--- a/WebReviewSite/WebReviewSite/Views/Shared/_Layout.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - GudYelp</title>
+    <title>@ViewBag.Title - .Food</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -12,7 +12,7 @@
 <div class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand " href="/">
-            GudYelp
+            .Food
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>GudYelp &copy; @DateTime.Now.Year - Cameron Wagstaff</p>
+        <p>.Food - Cameron Wagstaff</p>
     </footer>
 </div>
 
