--- a/WebReviewSite/WebReviewSite/Views/Home/About.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="text-center">
+    <h1>
+        About us
+    </h1>
+    <hr/>
+    <h3>
+        .Food is a rocket-fueled, fast paced startup ready to show the world what we're made of.
+    </h3>
+
+    <h4 class="text-muted">
+        We lied about the rocket fuel.
+    </h4>
+</div>
+
