--- a/WebReviewSite/WebReviewSite/Views/Home/CreateReview.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/CreateReview.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ReviewSiteLogic.Render.ReviewDisplay
 
 @{
-    ViewBag.Title = "CreateReview";
+    ViewBag.Title = "Creating Review";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     
@@ -65,7 +65,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to Restaurant", "ViewRestaurant", new { id = Model.RestaurantId}, new {@class = "btn btn-secondary"})
+    @Html.ActionLink("Back", "ViewRestaurant", new { id = Model.RestaurantId}, new {@class = "btn btn-secondary"})
 </div>
 
 @section Scripts {
