--- a/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<ReviewSiteLogic.Render.RestaurantDisplay>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
     <div class="row">
-        <div class="col-sm-4 card">
+        <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 card">
             <div class="card-body">
                 <h2 class="card-title">Your source for discovering great Restaurants.</h2>
                 @Html.ActionLink("Dive in »", "ListRestaurants", null, new {@class = "btn btn-outline-primary btn-lg"})
@@ -23,9 +23,6 @@
 
                 <h3 class="card-title">@Html.DisplayFor(modelItem => restaurant.Name)</h3>
                 <h4 class="card-text">@restaurant.Rating.ToString("N1") / 10</h4>
-                <!--
-                @Html.DisplayFor(modelItem => restaurant.Address)<br/>
-                @Html.DisplayFor(modelItem => restaurant.Phone)<br/> -->
                 <div class="card-footer">
                     @Html.ActionLink("Details", "ViewRestaurant", new { id = restaurant.Id }, new { @class = "btn btn-outline-primary" })
                 </div>
