--- a/WebReviewSite/WebReviewSite/Views/Home/ManageRestaurant.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/ManageRestaurant.cshtml
@@ -1,5 +1,4 @@
-﻿@using Antlr.Runtime.Tree
-@model ReviewSiteLogic.Render.RestaurantDisplay
+﻿@model ReviewSiteLogic.Render.RestaurantDisplay
 
 @{
     ViewBag.Title = "Manage Restaurant";
@@ -7,19 +6,19 @@
 }
 
 <div class="container">
+    <div class="p-2 h2">
+        Managing @Model.Name
+    </div>
     <div class="d-flex">
-        <div class="p-2 h2">
-            Managing @Model.Name
-        </div>
-        <div class="p-2">
-            @Html.ActionLink("Back", "ViewRestaurant", new {id = Model.Id}, new {@class = "btn btn-secondary"})
-        </div>
-        <div class="p-2">
-            @Html.ActionLink("Edit", "EditRestaurant", new {id = Model.Id}, new {@class = "btn btn-warning"})
-        </div>
-        <div class="p-2">
-            @Html.ActionLink("Delete", "DeleteRestaurant", new {id = Model.Id}, new {@class = "btn btn-danger"})
-        </div>
+            <div class="p-2">
+                @Html.ActionLink("Back", "ViewRestaurant", new {id = Model.Id}, new {@class = "btn btn-secondary"})
+            </div>
+            <div class="p-2">
+                @Html.ActionLink("Edit", "EditRestaurant", new {id = Model.Id}, new {@class = "btn btn-warning"})
+            </div>
+            <div class="p-2">
+                @Html.ActionLink("Delete", "DeleteRestaurant", new {id = Model.Id}, new {@class = "btn btn-danger"})
+            </div>
     </div>
 
     <table class="table">
