--- a/WebReviewSite/WebReviewSite/Views/Home/Contact.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/Contact.cshtml
@@ -11,5 +11,5 @@
     
     <strong>Business Inquiries:</strong> <a href="mailto:business@example.com">Business@example.com</a>
     <br/>
-    <a href="/" class="btn btn-outline-secondary my-3">We're Hiring!</a>
+    <a href="https://revature.com/" target="_blank" class="btn btn-outline-secondary my-3">We're Hiring!</a>
 </div>
