Resolved validation issue in Review updating.

--- a/WebReviewSite/WebReviewSite/Views/Home/EditRestaurant.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/EditRestaurant.cshtml
@@ -18,7 +18,6 @@
 
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.Rating)
-        @Html.HiddenFor(model => model.Reviews)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -45,7 +44,7 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-10">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </div>
