--- a/WebReviewSite/WebReviewSite/Views/Home/EditReview.cshtml
+++ b/WebReviewSite/WebReviewSite/Views/Home/EditReview.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ReviewSiteLogic.Render.ReviewDisplay
 @{
-    ViewBag.Title = "EditReview";
+    ViewBag.Title = "Editing Review";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-10">
             <input type="submit" value="Save" class="btn btn-primary" />
         </div>
     </div>
